# nodejs/21-PersonnelApi_Logs_Documents/src/controllers/auth.controller.js
@@ -12,7 +12,25 @@ const passwordEncrypt = require('../helpers/passwordEncrypt')
 
 module.exports = {
 
+
     login: async (req, res) => {
+
+            //swagger ayarlari
+/*
+    #swagger.tags = ['Authentication']
+    #swagger.summary = 'Login'
+    #swagger.description = 'Login with username and password'
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+            username: '*String',
+            password: '*String',
+        }
+
+    }
+
+*/
 
         const { username, password } = req.body
 
@@ -58,6 +76,14 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+
+            //swagger ayarlari
+/*
+    #swagger.tags = ['Authentication']
+    #swagger.summary = 'Login'
+    #swagger.description = 'Get delete token.'
+*/
+
 
         // Token Delete:
         // if (req.user) {
